# hanx-blockly

./: .gitignore  AI_STRATEGY.md  PROJECT_PLAN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
docs/: index.html  style.css
extensions/arduino/hanx-ble/: README.md  blocks.json  generator.js  manifest.json
extensions/arduino/hanx-bluetooth/: blocks.json  generator.js  manifest.json
extensions/arduino/hanx-display/: blocks.json  generator.js  manifest.json
extensions/arduino/hanx-motor/: blocks.json  generator.js  manifest.json
extensions/arduino/hanx-sensors/: blocks.json  generator.js  manifest.json
extensions/arduino/hanx-wifi/: blocks.json  generator.js  manifest.json
extensions/arduino/json/: blocks.json  generator.js  manifest.json
extensions/python/hanx-math/: blocks.json  generator.js  (+1 more)
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build_error.txt  build_log.txt  default.json.bak  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.json
src-tauri/src/: main.rs
src-tauri/src/cmd/: mod.rs
src-tauri/src/cmd/ai/: client.rs  mod.rs
src-tauri/src/cmd/arduino/: README.md  mod.rs
src-tauri/src/cmd/python/: README.md  mod.rs
src-tauri/src/cmd/serial/: mod.rs
src-tauri/src/cmd/sys/: constants.rs  execution.rs  extensions.rs  mod.rs
src-tauri/src/cmd/sys/env_manager/: arduino.rs  mod.rs  python.rs
src-tauri/src/cmd/sys/extension_manager/: arduino.rs  lifecycle.rs  mod.rs  python.rs
(+35 files in other folders)
